📚 Auto-update: News data refreshed - 2025-12-22 22:11 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -26078,5 +26078,53 @@
         "published": "Mon, 22 Dec 2025 15:12:49 GMT",
         "source": "YourStory RSS Feed",
         "summary": "In a conversation with YourStory founder Shradha Sharma, Zoho\u2019s Sridhar Vembu talks about India\u2019s fast-closing demographic window, his vision of a \u2018Bharat-first\u2019 model rooted in humanism, and technology\u2019s place in it."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/22/alphabet-to-buy-intersect-power-to-bypass-energy-grid-bottlenecks/",
+        "title": "Alphabet to buy Intersect Power to bypass energy grid bottlenecks",
+        "link": "https://techcrunch.com/2025/12/22/alphabet-to-buy-intersect-power-to-bypass-energy-grid-bottlenecks/",
+        "published": "Mon, 22 Dec 2025 21:10:54 +0000",
+        "source": "TechCrunch",
+        "summary": "Alphabet is set to pay $4.75 billion in cash, plus debt, for the data center and clean energy developer."
+    },
+    {
+        "id": "https://www.wired.com/story/hellofresh-zwilling-chef-knife-deal/",
+        "title": "HelloFresh Meal Kit's Discount Code for December 2025 Unlocks a Free Zwilling Knife",
+        "link": "https://www.wired.com/story/hellofresh-zwilling-chef-knife-deal/",
+        "published": "Mon, 22 Dec 2025 21:47:18 +0000",
+        "source": "WIRED",
+        "summary": "The Zwilling Four-Star chef's knife is the carbon steel blade WIRED recommends for most casual home chefs. It's free with HelloFresh meal kits, using this promo code"
+    },
+    {
+        "id": "https://www.engadget.com/gaming/nintendo/nintendo-has-huge-discounts-on-switch-2-games-in-its-holiday-sale-220058951.html?src=rss",
+        "title": "Nintendo has huge discounts on Switch 2 games in its holiday sale",
+        "link": "https://www.engadget.com/gaming/nintendo/nintendo-has-huge-discounts-on-switch-2-games-in-its-holiday-sale-220058951.html?src=rss",
+        "published": "Mon, 22 Dec 2025 22:00:58 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Nintendo is in a giving state of mind this season, offering some <a class=\"link\" href=\"https://www.nintendo.com/us/store/sales-and-deals/hits-for-the-holidays/#sort=df&amp;p=2\" target=\"_blank\">holiday deals</a> on games in the eShop, including a few recent Switch 2 titles. For instance, the Switch 2 version of <em>Ball x Pit</em>, which was one of our staff's <a class=\"link\" href=\"https://www.engadget.com/gaming/engadgets-favorite-games-of-2025-153000109.html\" target=\"_blank\">favorite games o"
+    },
+    {
+        "id": "https://www.engadget.com/entertainment/streaming/pirate-group-annas-archive-says-it-has-scraped-spotify-in-its-entirety-211914755.html?src=rss",
+        "title": "Pirate group Anna's Archive says it has scraped Spotify in its entirety",
+        "link": "https://www.engadget.com/entertainment/streaming/pirate-group-annas-archive-says-it-has-scraped-spotify-in-its-entirety-211914755.html?src=rss",
+        "published": "Mon, 22 Dec 2025 21:19:14 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Anna's Archive, the open-source search engine for shadow libraries, <a href=\"https://annas-archive.li/blog/backing-up-spotify.html\"><ins>says</ins></a> it scraped Spotify's entire library of music. The group acquired metadata for around 256 million tracks, with 86 million actual songs, and is just under 300TB in total size.</p>\n<p>&quot;A while ago, we discovered a way to scrape Spotify at scale. We saw a role for us here to build a music archive primarily aimed at preservation,&quot; the gro"
+    },
+    {
+        "id": "https://www.zdnet.com/article/sony-wh-1000xm5-free-earbuds-holiday-deal/",
+        "title": "Sony's excellent WH-1000XM5 are over 50% off - and come with a free pair of earbuds",
+        "link": "https://www.zdnet.com/article/sony-wh-1000xm5-free-earbuds-holiday-deal/",
+        "published": "Mon, 22 Dec 2025 21:36:05 GMT",
+        "source": "Latest news",
+        "summary": "Looking for a last-minute gift (maybe for yourself)? Consider a pair of our favorite Sony headphones, which come with a free pair of noise-cancelling earbuds, too."
+    },
+    {
+        "id": "https://yourstory.com/2025/12/govt-to-release-new-series-of-retail-inflation-gdp-data-from-feb-next-year",
+        "title": "Govt to release new series of retail inflation, GDP data from Feb next year",
+        "link": "https://yourstory.com/2025/12/govt-to-release-new-series-of-retail-inflation-gdp-data-from-feb-next-year",
+        "published": "Mon, 22 Dec 2025 13:03:33 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "The primary objective of the workshop is to share the proposed methodological and structural changes in the ongoing base revision of GDP, CPI, and IIP for seeking feedback and comments of the participants."
     }
 ]
