--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -26246,5 +26246,101 @@
         "published": "Tue, 23 Dec 2025 06:00:00 +0530",
         "source": "Tech-Economic Times",
         "summary": "The bare PCB market in India currently is worth $5 billion, with an 88% import dependence. Domestic production is expected to expand from $0.6 billion in fiscal 2024 to $3.8 billion by FY29, reducing the dependence on supplies from abroad to 69%, the financial services firm said in the report."
+    },
+    {
+        "id": "https://www.theverge.com/news/849460/fcc-foreign-drone-ban-dji-congress-deadline",
+        "title": "The FCC\u2019s foreign drone ban is here",
+        "link": "https://www.theverge.com/news/849460/fcc-foreign-drone-ban-dji-congress-deadline",
+        "published": "2025-12-22T20:13:51-05:00",
+        "source": "The Verge",
+        "summary": "The Federal Communications Commission has banned new drones made in foreign countries from being imported into the US unless the Department of Defense or the Department of Homeland Security recommends them. Monday's action added drones to the FCC's Covered List, qualifying foreign-made drones and drone parts, like those from DJI, as communications equipment representing \"unacceptable [&#8230;]"
+    },
+    {
+        "id": "https://www.zdnet.com/article/how-to-turn-on-private-dns-mode-android-phone/",
+        "title": "How to turn on Private DNS Mode on Android - and why it's a must for security",
+        "link": "https://www.zdnet.com/article/how-to-turn-on-private-dns-mode-android-phone/",
+        "published": "Tue, 23 Dec 2025 02:15:46 GMT",
+        "source": "Latest news",
+        "summary": "Unencrypted DNS can expose your browsing, but Android's Private DNS keeps it secure. Here's how to enable it."
+    },
+    {
+        "id": "https://www.zdnet.com/article/find-lost-iphone-with-text-shortcut/",
+        "title": "Is your iPhone missing? This genius camera trick helps you find it - fast",
+        "link": "https://www.zdnet.com/article/find-lost-iphone-with-text-shortcut/",
+        "published": "Tue, 23 Dec 2025 02:00:16 GMT",
+        "source": "Latest news",
+        "summary": "With one text, you can trigger a front or rear camera photo and grab your iPhone's exact location. No Find My required."
+    },
+    {
+        "id": "https://www.zdnet.com/article/best-tech-surprises-2025/",
+        "title": "5 tech gadgets that I didn't expect to love this much in 2025 (including surprise earbuds)",
+        "link": "https://www.zdnet.com/article/best-tech-surprises-2025/",
+        "published": "Tue, 23 Dec 2025 01:15:47 GMT",
+        "source": "Latest news",
+        "summary": "While the Samsung Galaxy Z Fold 7 remained my favorite gadget throughout the year, there were some surprising entries on my list."
+    },
+    {
+        "id": "https://www.zdnet.com/article/privacy-screen-protector-s25-ultra-review/",
+        "title": "I thought a privacy screen protector was a great idea - until I put one on my Galaxy S25 Ultra",
+        "link": "https://www.zdnet.com/article/privacy-screen-protector-s25-ultra-review/",
+        "published": "Tue, 23 Dec 2025 01:01:06 GMT",
+        "source": "Latest news",
+        "summary": "The extra security is cool, but the underlying drawbacks aren't."
+    },
+    {
+        "id": "https://www.zdnet.com/article/best-tv-audio-settings/",
+        "title": "Can't hear TV dialogue? I found 3 methods to dramatically improve the audio quality",
+        "link": "https://www.zdnet.com/article/best-tv-audio-settings/",
+        "published": "Tue, 23 Dec 2025 01:00:48 GMT",
+        "source": "Latest news",
+        "summary": "Adjusting only a few TV settings can make those quiet, whisper-filled dialogue scenes much easier to hear."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/newsletters/morning-dispatch/y-combinator-exec-on-indian-founders-fmcgs-qcomm-cost/articleshow/126131516.cms",
+        "title": "Y Combinator exec on Indian founders; FMCGs qcomm cost",
+        "link": "https://economictimes.indiatimes.com/tech/newsletters/morning-dispatch/y-combinator-exec-on-indian-founders-fmcgs-qcomm-cost/articleshow/126131516.cms",
+        "published": "Tue, 23 Dec 2025 07:16:16 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Happy Tuesday! Y Combinator general partner Ankit Gupta said AI is making young Indian founders attractive to investors. This and more in today\u2019s ETtech Morning Dispatch."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/keen-to-bet-more-on-indian-founders-amid-strong-show-yc-partner/articleshow/126131476.cms",
+        "title": "Keen to bet more on Indian founders amid strong show: YC Partner",
+        "link": "https://economictimes.indiatimes.com/tech/technology/keen-to-bet-more-on-indian-founders-amid-strong-show-yc-partner/articleshow/126131476.cms",
+        "published": "Tue, 23 Dec 2025 06:49:24 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Y Combinator partner Ankit Gupta says funding appetite for Indian founders is surging as India produces young, highly technical, AI native talent competing globally. AI unlocks startup ideas impossible until recently, while many founders move to San Francisco and seasoned Indian executives launch new ventures."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/quick-commerce-gets-costlier-for-fmcg-as-ad-spends-erode-margins/articleshow/126131985.cms",
+        "title": "Quick commerce gets costlier for FMCG as ad spends erode margins",
+        "link": "https://economictimes.indiatimes.com/tech/technology/quick-commerce-gets-costlier-for-fmcg-as-ad-spends-erode-margins/articleshow/126131985.cms",
+        "published": "Tue, 23 Dec 2025 06:00:00 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Quick commerce is racing ahead, but it's facing a bumpy road as profit margins begin to shrink. With consumer goods firms pouring more resources into advertising on these swift platforms, they're finding that their earnings are akin to those of traditional retailers."
+    },
+    {
+        "id": "https://yourstory.com/2025/12/buyback-programmes-powering-indias-circular-economy-revolution",
+        "title": "Buyback programmes are powering India\u2019s circular economy revolution",
+        "link": "https://yourstory.com/2025/12/buyback-programmes-powering-indias-circular-economy-revolution",
+        "published": "Tue, 23 Dec 2025 01:50:00 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "Buyback and trade-in programmes are emerging as the backbone of India\u2019s circular economy\u2014unlocking value for consumers, extending device lifecycles, and making premium technology more accessible while reducing e-waste."
+    },
+    {
+        "id": "https://inc42.com/features/quick-commerce-2026-trends-outlook-most-competitive-phase/",
+        "title": "Is Quick Commerce Set To Enter Its Most Competitive Phase In 2026?",
+        "link": "https://inc42.com/features/quick-commerce-2026-trends-outlook-most-competitive-phase/",
+        "published": "Tue, 23 Dec 2025 02:30:25 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"Is Quick Commerce Set To Enter Its Most Competitive Phase In 2026?\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1026\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/12/FTR-100-4-3.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1361\" />If 2024 still had a few naysayers believing that the quick commerce wave wouldn\u2019t last, the past 12 months have&#8230;"
+    },
+    {
+        "id": "https://inc42.com/features/honasas-2025-becoming-more-than-mamaearth/",
+        "title": "Honasa\u2019s 2025: Becoming More Than Mamaearth",
+        "link": "https://inc42.com/features/honasas-2025-becoming-more-than-mamaearth/",
+        "published": "Tue, 23 Dec 2025 01:30:25 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"Honasa&#039;s 2025: Becoming More Than Mamaearth\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/12/ftr-1-2.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />In 2025, Honasa deliberately razed what it had built over the years. The beauty and personal care (BPC) giant spent&#8230;"
     }
 ]
