📚 Auto-update: News data refreshed - 2025-12-23 03:55 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -26342,5 +26342,85 @@
         "published": "Tue, 23 Dec 2025 01:30:25 +0000",
         "source": "Inc42 Media",
         "summary": "<img alt=\"Honasa&#039;s 2025: Becoming More Than Mamaearth\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/12/ftr-1-2.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />In 2025, Honasa deliberately razed what it had built over the years. The beauty and personal care (BPC) giant spent&#8230;"
+    },
+    {
+        "id": "https://arstechnica.com/space/2025/12/in-a-surprise-announcement-tory-bruno-is-out-as-ceo-of-united-launch-alliance/",
+        "title": "In a surprise announcement, Tory Bruno is out as CEO of United Launch Alliance",
+        "link": "https://arstechnica.com/space/2025/12/in-a-surprise-announcement-tory-bruno-is-out-as-ceo-of-united-launch-alliance/",
+        "published": "Mon, 22 Dec 2025 23:51:44 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "\"It has been a great privilege to lead ULA through its transformation and to bring Vulcan into service.\""
+    },
+    {
+        "id": "https://arstechnica.com/gaming/2025/12/vince-zampella-developer-of-call-of-duty-and-battlefield-games-dies-at-55/",
+        "title": "Call of Duty co-creator and Battlefield lead Vince Zampella dies in car crash",
+        "link": "https://arstechnica.com/gaming/2025/12/vince-zampella-developer-of-call-of-duty-and-battlefield-games-dies-at-55/",
+        "published": "Mon, 22 Dec 2025 21:35:51 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "He had worked on Medal of Honor, Call of Duty, Titanfall, and Battlefield."
+    },
+    {
+        "id": "https://arstechnica.com/space/2025/12/safety-panel-says-nasa-should-have-taken-starliner-incident-more-seriously/",
+        "title": "Safety panel says NASA should have taken Starliner incident more seriously",
+        "link": "https://arstechnica.com/space/2025/12/safety-panel-says-nasa-should-have-taken-starliner-incident-more-seriously/",
+        "published": "Mon, 22 Dec 2025 21:11:11 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "\"This particular anomaly deserves to be right up front and center for quite some time.\""
+    },
+    {
+        "id": "https://arstechnica.com/tech-policy/2025/12/worlds-largest-shadow-library-brags-it-scraped-300tb-of-spotify-music-metadata/",
+        "title": "World\u2019s largest shadow library made a 300TB copy of Spotify\u2019s most streamed songs",
+        "link": "https://arstechnica.com/tech-policy/2025/12/worlds-largest-shadow-library-brags-it-scraped-300tb-of-spotify-music-metadata/",
+        "published": "Mon, 22 Dec 2025 19:34:22 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Spotify is reportedly investigating how much music Anna\u2019s Archive scraped."
+    },
+    {
+        "id": "https://arstechnica.com/science/2025/12/us-government-finds-new-excuse-to-stop-construction-of-offshore-wind/",
+        "title": "US blocks all offshore wind construction, says reason is classified",
+        "link": "https://arstechnica.com/science/2025/12/us-government-finds-new-excuse-to-stop-construction-of-offshore-wind/",
+        "published": "Mon, 22 Dec 2025 18:29:42 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Projects with hardware in the water stopped due to Department of Defense fears."
+    },
+    {
+        "id": "https://github.com/karol-broda/snitch",
+        "title": "Snitch \u2013 A friendly Netstat alternative for humans",
+        "link": "https://github.com/karol-broda/snitch",
+        "published": "Tue, 23 Dec 2025 01:03:57 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46361229\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/how-to-turn-on-advanced-protection-android-16/",
+        "title": "Your Android phone's most powerful security feature is off by default - turn it on ASAP",
+        "link": "https://www.zdnet.com/article/how-to-turn-on-advanced-protection-android-16/",
+        "published": "Tue, 23 Dec 2025 03:01:01 GMT",
+        "source": "Latest news",
+        "summary": "One of Google's most critical features is hidden behind a single toggle - turn it on to protect against theft, scams, spam, and more."
+    },
+    {
+        "id": "https://www.zdnet.com/article/how-amazon-rufus-ai-helped-my-holiday-shopping/",
+        "title": "I tried Amazon's new AI assistant, and I'm never shopping without it again",
+        "link": "https://www.zdnet.com/article/how-amazon-rufus-ai-helped-my-holiday-shopping/",
+        "published": "Tue, 23 Dec 2025 03:00:43 GMT",
+        "source": "Latest news",
+        "summary": "Did you know Amazon's Rufus AI tool can alert you to price drops and even snag deals for you? That's just one of several game-changing features."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/funding/prosperr-io-raises-4-million-from-jungle-ventures-others/articleshow/126132457.cms",
+        "title": "Prosperr.io raises $4 million from Jungle Ventures, others",
+        "link": "https://economictimes.indiatimes.com/tech/funding/prosperr-io-raises-4-million-from-jungle-ventures-others/articleshow/126132457.cms",
+        "published": "Tue, 23 Dec 2025 08:44:12 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Bengaluru startup Prosperr.io raised $4 million in a Jungle Ventures-led seed round recently. It offers subscription-based tax planning and compliance services for salaried users and enterprises across India markets. New funds will boost product development, B2B sales, and expansion into wealth management and adjacent services."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/artificial-intelligence/bytedance-plans-to-spend-23-billion-towards-ai-infrastructure-in-2026-ft/articleshow/126132253.cms",
+        "title": "ByteDance plans to spend $23 billion towards AI infrastructure in 2026: FT",
+        "link": "https://economictimes.indiatimes.com/tech/artificial-intelligence/bytedance-plans-to-spend-23-billion-towards-ai-infrastructure-in-2026-ft/articleshow/126132253.cms",
+        "published": "Tue, 23 Dec 2025 08:25:13 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "ByteDance, is planning major 2026 spending on AI infrastructure, signalling the TikTok owner\u2019s growing push into advanced artificial intelligence systems."
     }
 ]
