--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -26422,5 +26422,13 @@
         "published": "Tue, 23 Dec 2025 08:25:13 +0530",
         "source": "Tech-Economic Times",
         "summary": "ByteDance, is planning major 2026 spending on AI infrastructure, signalling the TikTok owner\u2019s growing push into advanced artificial intelligence systems."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/artificial-intelligence/new-york-times-reporter-sues-google-xai-openai-over-chatbot-training/articleshow/126133052.cms",
+        "title": "New York Times reporter sues Google, xAI, OpenAI over chatbot training",
+        "link": "https://economictimes.indiatimes.com/tech/artificial-intelligence/new-york-times-reporter-sues-google-xai-openai-over-chatbot-training/articleshow/126133052.cms",
+        "published": "Tue, 23 Dec 2025 09:28:56 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Investigative journalist John Carreyrou has sued major AI companies, alleging they used copyrighted books without permission to train chatbots. The case names firms including OpenAI, Google, Meta, Anthropic, Perplexity and Elon Musk\u2019s xAI. The writers rejected a class action route, arguing settlements undervalue individual copyright claims."
     }
 ]
