📚 Auto-update: News data refreshed - 2025-12-23 05:16 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -26430,5 +26430,29 @@
         "published": "Tue, 23 Dec 2025 09:28:56 +0530",
         "source": "Tech-Economic Times",
         "summary": "Investigative journalist John Carreyrou has sued major AI companies, alleging they used copyrighted books without permission to train chatbots. The case names firms including OpenAI, Google, Meta, Anthropic, Perplexity and Elon Musk\u2019s xAI. The writers rejected a class action route, arguing settlements undervalue individual copyright claims."
+    },
+    {
+        "id": "https://docs.fcc.gov/public/attachments/DOC-416839A1.pdf",
+        "title": "FCC Updates Covered List to Include Foreign UAS and UAS Critical Components [pdf]",
+        "link": "https://docs.fcc.gov/public/attachments/DOC-416839A1.pdf",
+        "published": "Tue, 23 Dec 2025 03:57:02 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46362275\">Comments</a>"
+    },
+    {
+        "id": "https://inc42.com/buzz/how-cashfrees-pulse-turns-complex-data-into-real-time-business-insights-for-merchants/",
+        "title": "How Cashfree\u2019s Pulse Turns Complex Data Into Real-Time Business Insights For Merchants",
+        "link": "https://inc42.com/buzz/how-cashfrees-pulse-turns-complex-data-into-real-time-business-insights-for-merchants/",
+        "published": "Tue, 23 Dec 2025 05:00:16 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"How Cashfree\u2019s Pulse Turns Complex Data Into Real-Time Business Insights For Merchants\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/12/Cashfrees-Pulse.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Over the past few years, India has become one of the world\u2019s fastest-growing hubs for online businesses. D2C brands, SaaS&#8230;"
+    },
+    {
+        "id": "https://inc42.com/resources/how-ai-and-full-stack-platforms-will-power-indias-wealthtech-boom-in-2026/",
+        "title": "How AI And Full-Stack Platforms Will Power India\u2019s Wealthtech Boom In 2026",
+        "link": "https://inc42.com/resources/how-ai-and-full-stack-platforms-will-power-indias-wealthtech-boom-in-2026/",
+        "published": "Tue, 23 Dec 2025 04:33:39 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"From SIPs To Smart Portfolios: India\u2019s Wealthtech Playbook For 2026\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/12/Untitled-design-39.png\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />India\u2019s wealthtech ecosystem has grown rapidly over the past decade, particularly in mutual fund SIPs, equity investments, and F&#38;O trading.\u00a0&#8230;"
     }
 ]
